fix(filterBar): fix categories alignments to center

--- a/e_commerce/src/index.css
+++ b/e_commerce/src/index.css
@@ -153,7 +153,7 @@ span {
 
 .filter-bar {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin: 20px 0;
 }
 
